--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,12 @@
 	padding: 5px;
 	border: solid 1px green;
 }
+
+.container{
+
+	width: 700px; 
+    margin-left: auto;
+    margin-right: auto;
+	text-align: center;
+	background-color: green;
+}
