--- a/css/estilos-cadastro.css
+++ b/css/estilos-cadastro.css
@@ -1,56 +1,54 @@
-body{
-    margin: 0px;
+.font-text{
+
+    font-family: Georgia, serif;
+    font-size: 25px;
+    letter-spacing: 0px;
+    word-spacing: 2px;
+    color: #C112FF;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+        
 }
 
-#divCards{
-    width: 100%;
-    height: 100%;
-}
-
-.div-card{
-
-    widht: 200px;
-    height: 250px;
-    backgrou-color: #ccc;
-    padding: 5px;
-    float: left;
-    margin: 5px;
-    background-color: green;
-}
-
-.div-card-img img{
-    width: 100%;
-    height: 180px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.div-card-descricao{
-    width: 100%;
-    font-size: 10px;
-    text-align: center;
-    height: 30px;
-    padding-top: 10px;
-}
-
-.div-card-button{
-    text-align: center;
-    background-color: blue;
-    color: white;
-    height: 30px;
-    cursor: pointer;
-    padding-top: 5px;
-
-}
-
-
-.contorno-img:hover{ 
-    background-color: #000000; 
-    transition: 0.5s;
-    cursor: pointer;
-    opacity: 0.7;
- 
-    border-width: medium;
+.css-input {
+    padding: 4px;
+    font-size: 16px;
+    border-width: 1px;
+    border-color: #f360ed;
+    background-color: #ebf1b9;
+    color: #7d048d;
     border-style: solid;
-    border-color: #00f;
+    border-radius: 13px;
+    box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+    text-shadow: 1px 0px 1px rgba(66,66,66,.75);
 }
+.css-input:focus {
+    outline:none;
+}
+
+.Button {
+	background:linear-gradient(to bottom, #f567ec 5%, #b5bd86 100%);
+	background-color:#f567ec;
+	border-radius:28px;
+	border:1px solid #800878;
+	display:inline-block;
+	cursor:pointer;
+	color:#330433;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.Button:hover {
+	background:linear-gradient(to bottom, #b5bd86 5%, #f567ec 100%);
+	background-color:#b5bd86;
+}
+.Button:active {
+	position:relative;
+	top:1px;
+}
+
